--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
       .animate-blink {
         animation: blink 1s step-end infinite;
       }
+      @keyframes sentence-change {
+        0% {
+          opacity: 1;
+          filter: blur(0px);
+          transform: scale(1);
+        }
+        49% {
+          opacity: 0;
+          filter: blur(4px);
+          transform: scale(1.02);
+        }
+        50% {
+          opacity: 0;
+          filter: blur(4px);
+          transform: scale(0.98);
+        }
+        100% {
+          opacity: 1;
+          filter: blur(0px);
+          transform: scale(1);
+        }
+      }
+      .animate-sentence-change {
+          animation: sentence-change 500ms ease-in-out;
+      }
     </style>
   <script type="importmap">
 {
