--- a/index.html
+++ b/index.html
@@ -22,27 +22,23 @@
       @keyframes sentence-change {
         0% {
           opacity: 1;
-          filter: blur(0px);
-          transform: scale(1);
+          transform: translateY(0);
         }
         49% {
           opacity: 0;
-          filter: blur(4px);
-          transform: scale(1.02);
+          transform: translateY(-20px);
         }
         50% {
           opacity: 0;
-          filter: blur(4px);
-          transform: scale(0.98);
+          transform: translateY(20px);
         }
         100% {
           opacity: 1;
-          filter: blur(0px);
-          transform: scale(1);
+          transform: translateY(0);
         }
       }
       .animate-sentence-change {
-          animation: sentence-change 500ms ease-in-out;
+          animation: sentence-change 600ms cubic-bezier(0.4, 0, 0.2, 1);
       }
     </style>
   <script type="importmap">
