--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
       .animate-sentence-change {
           animation: sentence-change 600ms cubic-bezier(0.4, 0, 0.2, 1);
       }
+      .loading-bar {
+        width: 100%;
+        max-width: 300px;
+        height: 20px;
+        background-color: rgba(0,0,0,0.5);
+        border: 2px solid #555;
+        border-radius: 2px;
+        padding: 2px;
+        margin: 1rem auto;
+        box-shadow: inset 0 0 5px #000;
+      }
+      .loading-bar-inner {
+        height: 100%;
+        width: 0%;
+        background: linear-gradient(to bottom, #fca503, #e86a02);
+        border-radius: 1px;
+        transition: width 0.3s ease-out;
+      }
     </style>
   <script type="importmap">
 {
