--- a/index.html
+++ b/index.html
@@ -57,6 +57,33 @@
         background: linear-gradient(to bottom, #fca503, #e86a02);
         border-radius: 1px;
         transition: width 0.3s ease-out;
+        position: relative;
+        overflow: hidden;
+      }
+      .loading-bar-inner::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+        animation: loading-scanner 1.8s infinite ease-in-out;
+      }
+      @keyframes loading-scanner {
+        0% {
+          transform: translateX(-100%);
+        }
+        100% {
+          transform: translateX(100%);
+        }
+      }
+      @keyframes fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      .animate-fade-in {
+        animation: fade-in 300ms ease-out;
       }
     </style>
   <script type="importmap">
