feat: Add conversation mode and listening animation
Introduces a new "conversation" mode to the Typ-Affe application, allowing for voice-based interaction.

This change includes:
- A new `animate-pulse-listening` CSS animation to visually indicate when the application is listening.
- Updates `metadata.json` to request microphone permissions.
- Defines a `TranscriptEntry` type for storing conversational data.
- Adds a `ConversationUI` component for managing the voice interaction interface.
- Integrates `ConversationUI` into `App.tsx`, allowing users to switch between typing and conversation modes.
- Implements the logic for starting and managing a conversation session with Google GenAI.
- Modifies `GameOverlay` to support the new `appMode` and `onModeChange` props.
- Enhances the `startGame` function in `App.tsx` to become `startTypingGame` to differentiate from conversation mode initiation.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@
       .animate-fade-in {
         animation: fade-in 300ms ease-out;
       }
+      @keyframes pulse-listening {
+        0%, 100% {
+          transform: scale(1);
+          opacity: 0.5;
+        }
+        50% {
+          transform: scale(1.3);
+          opacity: 1;
+        }
+      }
+      .animate-pulse-listening {
+        animation: pulse-listening 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+      }
     </style>
   <script type="importmap">
 {
